() 조건 분석